# geoqa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINKEDIN_POST.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api-reference.md  index.html  index.md  installation.md  quick-start.md
examples/: 01_quick_start.ipynb  02_quality_checks-Copy1.ipynb  02_quality_checks.ipynb  03_report_generation.ipynb
examples/reports/: quality_summary.csv
geoqa/: __init__.py  attributes.py  charts.py  cli.py  core.py  geometry.py  report.py  spatial.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_attributes.py  test_charts.py  test_core.py  test_geometry.py  test_report.py  test_topology.py
